@@ -17,6 +17,9 @@
      [ssh_config.5 sshconnect.c sshd.c sshd_config.5]
      rename keepalive to tcpkeepalive; the old name causes too much
      confusion; ok djm, dtucker; with help from jmc@
+   - dtucker@cvs.openbsd.org 2003/12/09 23:45:32
+     [clientloop.c]
+     Clear exit code when ssh -N is terminated with a SIGTERM.  ok markus@
 
 20031209
  - (dtucker) OpenBSD CVS Sync
@@ -1586,4 +1589,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3143 2003/12/17 05:31:10 djm Exp $
+$Id: ChangeLog,v 1.3144 2003/12/17 05:31:53 djm Exp $
